package com.castlelecs.platform.entity;

import jakarta.persistence.*;
import lombok.*;

@Entity
@Table(name = "quiz_answer_options")
@Data
@Builder
public class QuizAnswerOption {

    @Id
    @GeneratedValue(strategy = GenerationType.IDENTITY)
    private Long id;

    @ManyToOne(fetch = FetchType.LAZY, optional = false)
    @JoinColumn(name = "question_id", nullable = false)
    private QuizQuestion question;

    @Column(nullable = false, columnDefinition = "text")
    private String text;

    @Column(name = "is_correct", nullable = false)
    private boolean correct;
}